[package]
name = "hsh"
version = "0.1.0"
authors = ["rowan"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.2"
bcrypt = "0.9.0"
blake2 = "0.9.1"
gost94 = "0.9.1"
groestl = "0.9.0"
md2 = "0.9.0"
md4 = "0.9.0"
md-5 = "0.9.1"
ripemd160 = "0.9.1"
ripemd320 = "0.9.0"
sha-1 = "0.9.2"
sha2 = "0.9.2"
sha3 = "0.9.1"
shabal = "0.3.0"
streebog = "0.9.2"
structopt = "0.3.20"
whirlpool = "0.9.0"
