[package]
name = "hsh"
version = "0.1.0"
authors = ["rowan"]
edition = "2018"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4.3"
bcrypt = "0.10.1"
blake2 = "0.9.2"
fern = { version = "0.6.0", features = ["colored"] }
gost94 = "0.9.1"
groestl = "0.9.0"
md2 = "0.9.0"
md4 = "0.9.0"
md-5 = "0.9.1"
ripemd160 = "0.9.1"
ripemd320 = "0.9.0"
sha-1 = "0.9.6"
sha2 = "0.9.5"
sha3 = "0.9.1"
shabal = "0.3.0"
streebog = "0.9.2"
structopt = "0.3.20"
whirlpool = "0.9.0"
b64 = "0.4.0"
lazy_static = "1.4.0"
regex = "1.5.4"
exitcode = "1.1.2"
log = "0.4.14"
chrono = "0.4.19"
atty = "0.2.14"
clicolors-control = "1.0.1"

[dev-dependencies]
assert_cmd = "1.0.3"
predicates = "1.0.8"
proptest = "1.0.0"
